# lotus

./: .gitignore  .tool-versions  README.md  cargo_bin.sh  cassandra.md  compila-back-new.sh  compila-back.sh  compila-front.sh  config.cassandra  config.cassandra.sql  config.md  config.project.json  config.roject  cqlsh.sh  deploy-back-new.sh  deploy-back.sh  deploy-front-new.sh  deploy-front.sh  lotus.service  mix.exs  mongo.md  mongo.utils  nvm.sh  redis_cli  redis_cli.sh  resize_main  start_cassandra.sh  start_redis.sh  undefined
apache_cassandra/: Table User
assets/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json
assets/public/: index.html
assets/public/wasm-bin/: wasm_bg.wasm
assets/src/: App.js  App.tsx  index.js  index.tsx
assets/src/actions/: index.js  (+1 more)
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: email.ex  lotus_web.ex
lib/friends/: users.ex
lib/lotus/: application.ex  cassandra.ex  cron.ex  curriculo.ex  encoder.ex  login.ex  lotusrust_back.ex  mailer.ex  mongo.ex  py.ex  scheduler.ex  user.ex  utils.ex  vagas.ex
lib/lotus_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
native/lotusrust_back/: Cargo.toml  README.md
native/lotusrust_back/src/: lib.rs
native/lotusrust_back/src/cassandra/: connect.rs  main.rs  queries.rs  user.rs  vagas.rs  vagas_filtros.rs
native/lotusrust_back/src/redis/: main.rs
native/lotusrust_back/src/redis_/: connect_.rs  vagas_.rs
priv/html/: pdf_curriculo.html
priv/python/: calculo.py  files.py  get_image_for_pdf.py
rel/: config.exs
test/: test_helper.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+100 files in other folders)
