[package]
name = "lotusrust_back"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "lotusrust_back"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0"
cdrs = { version = "2.2.1"}
cdrs_helpers_derive = "0.4.0"
maplit = "1.0.2"
rustc-serialize = "0.3.24"
chrono = "0.4"


uuid = { version = "0.2", features = ["rustc-serialize"] }


