[package]
name = "lotusrust_back"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "lotusrust_back"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0"
chrono = "0.4"
cdrs-tokio = "5.0.0"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "rt-multi-thread", "time"] }
maplit = "1.0.2"
cdrs-tokio-helpers-derive = "3.1.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
redis = { version = "0.21.0", features = ["tokio-comp"]}
futures = "0.3.17"



